; ModuleID = '/home/carl/AnghaBench/vlc/test/src/input/extr_demux-run.c_vlc_demux_process_path.c'
source_filename = "/home/carl/AnghaBench/vlc/test/src/input/extr_demux-run.c_vlc_demux_process_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_run_args = type { i32 }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"Error: cannot convert path to URL: %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vlc_demux_process_path(%struct.vlc_run_args* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.vlc_run_args*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store %struct.vlc_run_args* %0, %struct.vlc_run_args** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i8* @vlc_path2uri(i8* %8, i32* null)
  store i8* %9, i8** %6, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = icmp eq i8* %10, null
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = load i32, i32* @stderr, align 4
  %14 = load i8*, i8** %5, align 8
  %15 = call i32 @fprintf(i32 %13, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i8* %14)
  store i32 -1, i32* %3, align 4
  br label %23

16:                                               ; preds = %2
  %17 = load %struct.vlc_run_args*, %struct.vlc_run_args** %4, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = call i32 @vlc_demux_process_url(%struct.vlc_run_args* %17, i8* %18)
  store i32 %19, i32* %7, align 4
  %20 = load i8*, i8** %6, align 8
  %21 = call i32 @free(i8* %20)
  %22 = load i32, i32* %7, align 4
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %16, %12
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i8* @vlc_path2uri(i8*, i32*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i32 @vlc_demux_process_url(%struct.vlc_run_args*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
